args docker file

--- a/docker-compose/nginx/docker-compose.yaml
+++ b/docker-compose/nginx/docker-compose.yaml
@@ -21,3 +21,13 @@ services:
     container_name: mi-nginx3
     build: .
     #restart: always
+    
+  nginx4:
+    container_name: mi-nginx4
+    build: 
+      context: .
+      dockerfile: Dockerfile.ubuntu
+      args:
+        FICHERO_CONFIGURACION_NGINX: configuracion.nginx
+        NGINX_PORT: 81
+    #restart: always
