--- a/docker-compose/nginx/Dockerfile.ubuntu
+++ b/docker-compose/nginx/Dockerfile.ubuntu
@@ -2,6 +2,9 @@
 FROM ubuntu:latest
 #Variables a suministrar en el momento de crear la imagen del contenedor
 ARG FICHERO_CONFIGURACION_NGINX=configuracion.nginx # Valor por defecto
+ARG NGINX_PORT=80
+
+ENV NGINX_PORT=$NGINX_PORT 
 
 RUN apt update
 RUN apt install nginx -y
@@ -10,7 +13,9 @@ RUN git clone https://github.com/IvanciniGT/webEjemploAnsible /www
 #RUN cp -rv /tmp/web/* /www
 
 COPY $FICHERO_CONFIGURACION_NGINX /etc/nginx/sites-available/default
-
-EXPOSE 80
+sed -i 's/AMIGO/ENEMIGO/g' prueba.txt
+EXPOSE $NGINX_PORT 
+# Esto sirve para decirle a quien el puerto que se usa?
+# A mi! que soy un humano... El ordenador pasa de esto.....
 
 CMD ["nginx", "-g", "daemon off;"]
